@@ -25,6 +25,8 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @SuppressWarnings({"OptionalGetWithoutIsPresent", "DefaultAnnotationParam"})
 @Timeout(value = 10, unit = TimeUnit.SECONDS, threadMode = Timeout.ThreadMode.SEPARATE_THREAD)
@@ -45,8 +47,12 @@ class StructureFinderTest
     void propagateMaxPermission()
     {
         final CompletableFuture<List<DatabaseManager.StructureIdentifier>> databaseResult = new CompletableFuture<>();
-        Mockito.when(databaseManager.getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any()))
-            .thenReturn(databaseResult);
+        when(databaseManager.getIdentifiersFromPartial(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.any(),
+            Mockito.anyCollection())
+        ).thenReturn(databaseResult);
 
         new StructureFinder(
             structureRetrieverFactory,
@@ -54,28 +60,48 @@ class StructureFinderTest
             commandSender,
             "M"
         );
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), eq(PermissionLevel.CREATOR));
+
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(
+                Mockito.anyString(),
+                Mockito.any(),
+                eq(PermissionLevel.CREATOR),
+                Mockito.anyCollection()
+            );
 
         new StructureFinder(
             structureRetrieverFactory,
             databaseManager,
             commandSender,
             "M",
-            PermissionLevel.ADMIN
+            PermissionLevel.ADMIN,
+            Set.of()
         );
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), eq(PermissionLevel.ADMIN));
+
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(
+                Mockito.anyString(),
+                Mockito.any(),
+                eq(PermissionLevel.ADMIN),
+                Mockito.anyCollection()
+            );
 
         new StructureFinder(
             structureRetrieverFactory,
             databaseManager,
             commandSender,
             "M",
-            PermissionLevel.USER
+            PermissionLevel.USER,
+            Set.of()
         );
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), eq(PermissionLevel.USER));
+
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(
+                Mockito.anyString(),
+                Mockito.any(),
+                eq(PermissionLevel.USER),
+                Mockito.anyCollection()
+            );
     }
 
     @RepeatedTest(value = 30)
@@ -83,8 +109,12 @@ class StructureFinderTest
         throws InterruptedException, ExecutionException, TimeoutException
     {
         final CompletableFuture<List<DatabaseManager.StructureIdentifier>> databaseResult = new CompletableFuture<>();
-        Mockito.when(databaseManager.getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any()))
-            .thenReturn(databaseResult);
+        when(databaseManager.getIdentifiersFromPartial(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.any(),
+            Mockito.anyCollection())
+        ).thenReturn(databaseResult);
 
         final StructureFinder structureFinder =
             new StructureFinder(structureRetrieverFactory, databaseManager, commandSender, "M");
@@ -93,13 +123,13 @@ class StructureFinderTest
         final CompletableFuture<Set<String>> returned = structureFinder.getStructureIdentifiers();
         Assertions.assertFalse(returned.isDone());
 
-        databaseResult.complete(List.of(new DatabaseManager.StructureIdentifier(0, "MyDoor")));
+        databaseResult.complete(List.of(new DatabaseManager.StructureIdentifier(Mockito.mock(), 0, "MyDoor")));
         Thread.sleep(100); // Give it a slight delay to allow the notification to propagate.
         Assertions.assertTrue(returned.isDone());
 
         final List<String> names = new ArrayList<>(returned.get(10, TimeUnit.SECONDS));
         Assertions.assertEquals(1, names.size());
-        Assertions.assertEquals("MyDoor", names.get(0));
+        Assertions.assertEquals("MyDoor", names.getFirst());
 
         // Ensure that trying to retrieve it again will just give us the result immediately.
         final CompletableFuture<Set<String>> again = structureFinder.getStructureIdentifiers();
@@ -107,7 +137,7 @@ class StructureFinderTest
 
         final List<String> namesAgain = new ArrayList<>(again.get(10, TimeUnit.SECONDS));
         Assertions.assertEquals(1, namesAgain.size());
-        Assertions.assertEquals("MyDoor", namesAgain.get(0));
+        Assertions.assertEquals("MyDoor", namesAgain.getFirst());
     }
 
     @Test
@@ -137,8 +167,8 @@ class StructureFinderTest
         Assertions.assertTrue(structureFinder.getStructureUIDs().isPresent());
         Assertions.assertEquals(names, new ArrayList<>(structureFinder.getStructureIdentifiersIfAvailable().get()));
 
-        structureFinder.processInput("Myd"); // case-insensitive
-        structureFinder.processInput("Myd"); // Repeating shouldn't change anything
+        structureFinder.processInput("Myd", List.of()); // case-insensitive
+        structureFinder.processInput("Myd", List.of()); // Repeating shouldn't change anything
         Assertions.assertEquals(
             Set.of("MyDoor", "MyDrawbridge"),
             structureFinder.getStructureIdentifiersIfAvailable().get()
@@ -148,8 +178,8 @@ class StructureFinderTest
             structureFinder.getStructureIdentifiers().get(10, TimeUnit.SECONDS)
         );
         Assertions.assertEquals(Set.of(0L, 2L), structureFinder.getStructureUIDs().get());
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
     }
 
     @Test
@@ -159,16 +189,20 @@ class StructureFinderTest
         final List<String> names = List.of("MyDoor", "MyPortcullis", "MyDrawbridge", "TheirFlag");
         final List<DatabaseManager.StructureIdentifier> identifiers = createStructureIdentifiers(uids, names, true);
         final CompletableFuture<List<DatabaseManager.StructureIdentifier>> output = new CompletableFuture<>();
-        Mockito.when(databaseManager.getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any()))
-            .thenReturn(output);
+        when(databaseManager.getIdentifiersFromPartial(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.any(),
+            Mockito.anyCollection())
+        ).thenReturn(output);
 
         final StructureFinder structureFinder =
             new StructureFinder(structureRetrieverFactory, databaseManager, commandSender, "M");
 
-        structureFinder.processInput("My");
-        structureFinder.processInput("MyD");
-        structureFinder.processInput("MyDr");
-        structureFinder.processInput("MyD");
+        structureFinder.processInput("My", List.of());
+        structureFinder.processInput("MyD", List.of());
+        structureFinder.processInput("MyDr", List.of());
+        structureFinder.processInput("MyD", List.of());
 
         Assertions.assertTrue(structureFinder.getStructureUIDs().isEmpty());
         output.complete(identifiers);
@@ -178,8 +212,8 @@ class StructureFinderTest
             structureFinder.getStructureIdentifiersIfAvailable().get()
         );
 
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
     }
 
     @Test
@@ -189,20 +223,24 @@ class StructureFinderTest
         final List<String> names = List.of("MyDoor", "MyPortcullis", "MyDrawbridge", "TheirFlag");
         final List<DatabaseManager.StructureIdentifier> identifiers = createStructureIdentifiers(uids, names, true);
         final CompletableFuture<List<DatabaseManager.StructureIdentifier>> output = new CompletableFuture<>();
-        Mockito.when(databaseManager.getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any()))
-            .thenReturn(output);
+        when(databaseManager.getIdentifiersFromPartial(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.any(),
+            Mockito.anyCollection())
+        ).thenReturn(output);
 
         final StructureFinder structureFinder =
             new StructureFinder(structureRetrieverFactory, databaseManager, commandSender, "M");
 
-        structureFinder.processInput("My");
-        structureFinder.processInput("MyD");
-        structureFinder.processInput("MyDr");
+        structureFinder.processInput("My", List.of());
+        structureFinder.processInput("MyD", List.of());
+        structureFinder.processInput("MyDr", List.of());
         Assertions.assertEquals(List.of("My", "MyD", "MyDr"), new ArrayList<>(structureFinder.getPostponedInputs()));
-        structureFinder.processInput("MyPo");
+        structureFinder.processInput("MyPo", List.of());
         Assertions.assertEquals(List.of("My", "MyPo"), new ArrayList<>(structureFinder.getPostponedInputs()));
-        structureFinder.processInput("T");
-        structureFinder.processInput("Th");
+        structureFinder.processInput("T", List.of());
+        structureFinder.processInput("Th", List.of());
         Assertions.assertEquals(List.of("Th"), new ArrayList<>(structureFinder.getPostponedInputs()));
 
         Assertions.assertTrue(structureFinder.getStructureUIDs().isEmpty());
@@ -210,8 +248,8 @@ class StructureFinderTest
         Assertions.assertFalse(structureFinder.getStructureUIDs().isEmpty());
         Assertions.assertEquals(Set.of("TheirFlag"), structureFinder.getStructureIdentifiersIfAvailable().get());
 
-        Mockito.verify(databaseManager, Mockito.times(2))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        verify(databaseManager, Mockito.times(2))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
     }
 
     @Test
@@ -224,33 +262,33 @@ class StructureFinderTest
         final StructureFinder structureFinder =
             new StructureFinder(structureRetrieverFactory, databaseManager, commandSender, "M");
 
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
         Assertions.assertTrue(structureFinder.getStructureUIDs().isPresent());
         Assertions.assertEquals(
             Set.of("MyDoor", "MyPortcullis", "MyDrawbridge"),
             structureFinder.getStructureIdentifiersIfAvailable().get()
         );
 
-        structureFinder.processInput("MyD");
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        structureFinder.processInput("MyD", List.of());
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
         Assertions.assertEquals(
             Set.of("MyDoor", "MyDrawbridge"),
             structureFinder.getStructureIdentifiersIfAvailable().get()
         );
 
-        structureFinder.processInput("M");
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        structureFinder.processInput("M", List.of());
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
         Assertions.assertEquals(
             Set.of("MyDoor", "MyDrawbridge", "MyPortcullis"),
             structureFinder.getStructureIdentifiersIfAvailable().get()
         );
 
-        structureFinder.processInput("T");
-        Mockito.verify(databaseManager, Mockito.times(2))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        structureFinder.processInput("T", List.of());
+        verify(databaseManager, Mockito.times(2))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
         Assertions.assertEquals(
             Set.of("TheirFlag"),
             structureFinder.getStructureIdentifiersIfAvailable().get()
@@ -268,14 +306,14 @@ class StructureFinderTest
             new StructureFinder(structureRetrieverFactory,
                 databaseManager, commandSender, "1");
 
-        structureFinder.processInput("10");
+        structureFinder.processInput("10", List.of());
         Assertions.assertTrue(structureFinder.getStructureIdentifiersIfAvailable().isPresent());
         Assertions.assertEquals(
             Set.of("100", "101"),
             structureFinder.getStructureIdentifiersIfAvailable().get()
         );
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
     }
 
     @Test
@@ -293,7 +331,7 @@ class StructureFinderTest
         Assertions.assertTrue(structureFinder.getStructureUIDs(true).get().isEmpty());
         Assertions.assertTrue(structureFinder.getStructureIdentifiers(true).get(10, TimeUnit.SECONDS).isEmpty());
 
-        structureFinder.processInput("MyDoor");
+        structureFinder.processInput("MyDoor", List.of());
         Assertions.assertTrue(structureFinder.getStructureIdentifiersIfAvailable(true).isPresent());
         Assertions.assertEquals(
             Set.of("MyDoor"),
@@ -304,8 +342,8 @@ class StructureFinderTest
             structureFinder.getStructureIdentifiers(true).get(10, TimeUnit.SECONDS)
         );
 
-        Mockito.verify(databaseManager, Mockito.times(1))
-            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any());
+        verify(databaseManager, Mockito.times(1))
+            .getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyCollection());
     }
 
     @Test
@@ -320,12 +358,12 @@ class StructureFinderTest
         for (int idx = 0; idx < names.size(); ++idx)
         {
             final AbstractStructure structure = Mockito.mock(AbstractStructure.class);
-            Mockito.when(structure.getUid()).thenReturn(uids.get(idx));
-            Mockito.when(structure.getName()).thenReturn(names.get(idx));
+            when(structure.getUid()).thenReturn(uids.get(idx));
+            when(structure.getName()).thenReturn(names.get(idx));
             structures.add(idx, structure);
         }
 
-        Mockito.when(structureRetrieverFactory.of(Mockito.anyLong()))
+        when(structureRetrieverFactory.of(Mockito.anyLong()))
             .thenAnswer(invocation ->
             {
                 final long uid = invocation.getArgument(0, Long.class);
@@ -342,7 +380,7 @@ class StructureFinderTest
         Assertions.assertEquals(structures.subList(0, 3), structureFinder.getStructures().get(1, TimeUnit.SECONDS));
 
         Assertions.assertTrue(structureFinder.getStructures(true).get(1, TimeUnit.SECONDS).isEmpty());
-        structureFinder.processInput("MyDrawbridge");
+        structureFinder.processInput("MyDrawbridge", List.of());
         Assertions.assertEquals(
             List.of(structures.get(2)),
             structureFinder.getStructures(true).get(1, TimeUnit.SECONDS)
@@ -357,28 +395,41 @@ class StructureFinderTest
         final List<DatabaseManager.StructureIdentifier> ret = new ArrayList<>(uids.size());
         final List<?> idSource = useNames ? names : uids;
         for (int idx = 0; idx < uids.size(); ++idx)
-            ret.add(new DatabaseManager.StructureIdentifier(uids.get(idx), String.valueOf(idSource.get(idx))));
+            ret.add(new DatabaseManager.StructureIdentifier(
+                Mockito.mock(),
+                uids.get(idx),
+                String.valueOf(idSource.get(idx))
+            ));
         return ret;
     }
 
     private void setDatabaseIdentifierResults(List<Long> uids, List<String> names)
     {
         Assertions.assertEquals(uids.size(), names.size());
-        Mockito.when(databaseManager.getIdentifiersFromPartial(Mockito.anyString(), Mockito.any(), Mockito.any()))
-            .thenAnswer(invocation ->
+
+        when(databaseManager.getIdentifiersFromPartial(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.any(),
+            Mockito.anyCollection())
+        ).thenAnswer(invocation ->
+        {
+            final String input = invocation.getArgument(0, String.class);
+            final boolean useNames = MathUtil.parseLong(invocation.getArgument(0, String.class)).isEmpty();
+            final ArrayList<DatabaseManager.StructureIdentifier> identifiers = new ArrayList<>(uids.size());
+            final List<?> idSource = useNames ? names : uids;
+            for (int idx = 0; idx < uids.size(); ++idx)
             {
-                final String input = invocation.getArgument(0, String.class);
-                final boolean useNames = MathUtil.parseLong(invocation.getArgument(0, String.class)).isEmpty();
-                final ArrayList<DatabaseManager.StructureIdentifier> identifiers = new ArrayList<>(uids.size());
-                final List<?> idSource = useNames ? names : uids;
-                for (int idx = 0; idx < uids.size(); ++idx)
-                {
-                    final String identifier = String.valueOf(idSource.get(idx));
-                    if (StructureFinder.startsWith(input, identifier))
-                        identifiers.add(new DatabaseManager.StructureIdentifier(uids.get(idx), identifier));
-                }
-                identifiers.trimToSize();
-                return CompletableFuture.completedFuture(identifiers);
-            });
+                final String identifier = String.valueOf(idSource.get(idx));
+                if (StructureFinder.startsWith(input, identifier))
+                    identifiers.add(new DatabaseManager.StructureIdentifier(
+                        Mockito.mock(),
+                        uids.get(idx),
+                        identifier
+                    ));
+            }
+            identifiers.trimToSize();
+            return CompletableFuture.completedFuture(identifiers);
+        });
     }
 }
