@@ -1,21 +1,25 @@
 package nl.pim16aap2.animatedarchitecture.structures.bigdoor;
 
 import nl.pim16aap2.animatedarchitecture.core.api.IPlayer;
+import nl.pim16aap2.animatedarchitecture.core.api.NamespacedKey;
 import nl.pim16aap2.animatedarchitecture.core.audio.AudioDescription;
 import nl.pim16aap2.animatedarchitecture.core.audio.AudioSet;
 import nl.pim16aap2.animatedarchitecture.core.structures.AbstractStructure;
 import nl.pim16aap2.animatedarchitecture.core.structures.StructureType;
+import nl.pim16aap2.animatedarchitecture.core.structures.properties.Property;
 import nl.pim16aap2.animatedarchitecture.core.tooluser.ToolUser;
 import nl.pim16aap2.animatedarchitecture.core.tooluser.creator.Creator;
-import nl.pim16aap2.animatedarchitecture.core.util.Constants;
 import nl.pim16aap2.animatedarchitecture.core.util.MovementDirection;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
+import java.util.List;
 
+/**
+ * The type for the BigDoor structure.
+ */
 public final class StructureTypeBigDoor extends StructureType
 {
-    private static final int TYPE_VERSION = 1;
+    private static final int TYPE_VERSION = 2;
 
     private static final StructureTypeBigDoor INSTANCE = new StructureTypeBigDoor();
 
@@ -27,12 +31,18 @@ public final class StructureTypeBigDoor extends StructureType
     private StructureTypeBigDoor()
     {
         super(
-            Constants.PLUGIN_NAME,
-            "BigDoor",
+            NamespacedKey.of("BigDoor"),
             TYPE_VERSION,
-            Arrays.asList(
+            List.of(
                 MovementDirection.CLOCKWISE,
                 MovementDirection.COUNTERCLOCKWISE),
+            List.of(
+                Property.ANIMATION_SPEED_MULTIPLIER,
+                Property.OPEN_STATUS,
+                Property.QUARTER_CIRCLES,
+                Property.REDSTONE_MODE,
+                Property.ROTATION_POINT
+            ),
             "structure.type.big_door"
         );
     }
