@@ -1,21 +1,22 @@
 package nl.pim16aap2.animatedarchitecture.structures.drawbridge;
 
 import nl.pim16aap2.animatedarchitecture.core.api.IPlayer;
+import nl.pim16aap2.animatedarchitecture.core.api.NamespacedKey;
 import nl.pim16aap2.animatedarchitecture.core.audio.AudioDescription;
 import nl.pim16aap2.animatedarchitecture.core.audio.AudioSet;
 import nl.pim16aap2.animatedarchitecture.core.structures.AbstractStructure;
 import nl.pim16aap2.animatedarchitecture.core.structures.StructureType;
+import nl.pim16aap2.animatedarchitecture.core.structures.properties.Property;
 import nl.pim16aap2.animatedarchitecture.core.tooluser.ToolUser;
 import nl.pim16aap2.animatedarchitecture.core.tooluser.creator.Creator;
-import nl.pim16aap2.animatedarchitecture.core.util.Constants;
 import nl.pim16aap2.animatedarchitecture.core.util.MovementDirection;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
+import java.util.List;
 
 public final class StructureTypeDrawbridge extends StructureType
 {
-    private static final int TYPE_VERSION = 1;
+    private static final int TYPE_VERSION = 2;
 
     private static final StructureTypeDrawbridge INSTANCE = new StructureTypeDrawbridge();
 
@@ -26,14 +27,20 @@ public final class StructureTypeDrawbridge extends StructureType
     private StructureTypeDrawbridge()
     {
         super(
-            Constants.PLUGIN_NAME,
-            "DrawBridge",
+            NamespacedKey.of("DrawBridge"),
             TYPE_VERSION,
-            Arrays.asList(
+            List.of(
                 MovementDirection.NORTH,
                 MovementDirection.EAST,
                 MovementDirection.SOUTH,
                 MovementDirection.WEST),
+            List.of(
+                Property.ANIMATION_SPEED_MULTIPLIER,
+                Property.OPEN_STATUS,
+                Property.QUARTER_CIRCLES,
+                Property.REDSTONE_MODE,
+                Property.ROTATION_POINT
+            ),
             "structure.type.drawbridge"
         );
     }
